@@ -5,8 +5,8 @@
 # -----------------
 #
 [tox]
-#envlist = py{37,36,27}-{linux,macos}, flake8, coverage-macos
-envlist = py{36}-{linux,macos}, flake8, coverage-macos
+envlist = py{37,36,27}-{linux,macos}, flake8, coverage-macos
+#envlist = py{27}-{linux,macos}
 
 #
 skip_missing_interpreters = True
